<resources>
    <string name="app_name">CoinRabit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="LabelEgresos">Egresos</string>
    <string name="LabelIngresos">Ingresos</string>
    <string name="LabelEgreso">Egreso</string>
    <string name="LabelIngreso">Ingreso</string>
    <string name="LabelBienvenido">Bienvenido</string>
    <string name="LabelId">Id</string>
    <string name="LabelConcepto">Concepto</string>
    <string name="LabelMonto">Monto</string>
    <string name="LabelFecha">Fecha</string>
    <string name="LabelAgregar">Agregar</string>
    <string name="LabelGuardar">Guardar</string>
    <string name="LabelEliminar">Eliminar</string>
    <string name="LabelObservaciones">Observaciones</string>
    <string name="LabelDetalles">Detalles</string>














</resources>