<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustNothing"
    tools:context=".ui.gallery.GalleryFragment"
    >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRecyclerView"
        android:layout_width="388dp"
        android:layout_height="281dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/listRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvEgreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelEgreso"
            android:textColor="#000000"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/etConceptoEgreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Concepto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etMontoEgreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="132dp"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            android:ems="10"
            android:hint="@string/LabelMonto"
            android:imeActionLabel="$"
            android:inputType="numberDecimal"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etObservacionesEgreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/LabelObservaciones"
            android:inputType="textMultiLine" />


        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/etFechaEgreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LabelFecha"
            android:inputType="date"
            app:mask="####-##-##"
            app:maskCharacter="#"
            app:maskStyle="completable" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="106dp">

            <com.spark.submitbutton.SubmitButton
                android:id="@+id/btnSubmitEgreso"

                android:layout_width="155dp"
                android:layout_height="0dp"
                android:layout_marginStart="96dp"
                android:layout_marginEnd="96dp"
                android:text="@string/LabelAgregar"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:sub_btn_background="@color/GreenMoney"
                app:sub_btn_duration="2000"
                app:sub_btn_line_color="#D1BE00"
                app:sub_btn_ripple_color="@color/common_google_signin_btn_text_light_pressed"
                app:sub_btn_tick_color="@color/common_google_signin_btn_text_light" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
